--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div id="form_remark_holder" class="form_remark_holder shadow round-corner" align="center" style="width: 414px; display: block;">
                         <ul>
                             <li class="remark_item" style="display: block; border-bottom: none;">
-                                <div class="form_remark_title"><span class="color_b2" style=""><span class="color_o1"><b>您(黄志新)</b></span> 正在填写/办理<b>查看进校二维码</b></span></div>
+                                <div class="form_remark_title"><span class="color_b2" style=""><span class="color_o1"><b>您(杨雪双)</b></span> 正在填写/办理<b>查看进校二维码</b></span></div>
                             </li>
                         </ul>
                     </div>
