--- a/index_files/txm.html
+++ b/index_files/txm.html
@@ -539,8 +539,8 @@
     <div class="content-box">
         <div class="body-content" style="width: 260px">
             <div id="div_bt" style="font-size:20px;">销假进校二维码</div>
-            <div id="div_xm" style="font-weight: bold; font-size: 1rem;padding-top: 30px;">黄志新 20211145141</div>
-            <div id="div_bm" style="font-weight: bold; font-size: 1rem;">自动化学院</div>
+            <div id="div_xm" style="font-weight: bold; font-size: 1rem;padding-top: 30px;">杨雪双 20211145141</div>
+            <div id="div_bm" style="font-weight: bold; font-size: 1rem;">文学院</div>
             <div id="div_timer" style="font-weight: bold; font-size: 1.5rem;">06-01 15:59:38</div>
             <div id="div_ewm_p" style="border:solid 5px  #4EB16E;padding: 4px;border-color: #4EB16E">
                 <div id="div_ewm" title="http://e-office.nuist.edu.cn/infoplus/form/e1768306/view/G6T2JTW7GM">
